add update swagger
